# music-recommender-system

./: .gitignore  README.md  pyproject.toml  tox.ini
config/: .env  README.md  config.json
docs/: README.md
music-recommender-system/database/: Pipeline_Music.ipynb  README.md  fill_db.py
music-recommender-system/database/ddl/: table_with_song.sql  tables-main.sql
music-recommender-system/recommender/: recommender.py
music-recommender-system/recommender/jupyter-notebooks/: kmeans-recommender.ipynb  knn-recommender.ipynb  recommender-with-trained.models.ipynb
music-recommender-system/recommender/trained_models/: MLPmodel.pkl
music-recommender-system/utils/: database.py  parser.py  spotify.py
resources/data/: README.md
resources/data/open-data/: UserPlaylist.csv  hip-hop.json
resources/ddl/: table_with_genre.sql
resources/models/: Kstd6.pkl  svmmodel.pkl
